[package]
name = "storage"
version = "6.6.3"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = "0.4"
log4rs = { version = "1.2", features = ["gzip"] }
clap = { version = "4.0", features = ["derive"] }
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.21", features = ["full"] }
rocksdb = "0.19"
hex = "0.4"
serde = "1.0"
serde_derive = "1.0"
backtrace = "0.3"
tower = "0.4"

cloud-util = { package = "cloud-util", git = "https://github.com/cita-cloud/cloud-common-rs.git" }
cita_cloud_proto = { package = "cita_cloud_proto", git = "https://github.com/cita-cloud/cloud-common-rs.git" }

[[bin]]
name = "bench"
path = "benches/main.rs"

[dev-dependencies]
tempfile = "3.3"
quickcheck = "1.0"
rand = "0.8"
minitrace = { git = "https://github.com/tikv/minitrace-rust.git" }
minitrace-jaeger = { git = "https://github.com/tikv/minitrace-rust.git" }
minitrace-macro = { git = "https://github.com/tikv/minitrace-rust.git" }
libsm = "0.5"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
