[package]
name = "storage"
version = "6.6.5"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.27", features = ["full"] }
rocksdb = "0.20"
hex = "0.4"
serde = "1.0"
serde_derive = "1.0"
tower = "0.4"
tracing = "0.1"

cloud-util = { package = "cloud-util", git = "https://github.com/cita-cloud/cloud-common-rs" }
cita_cloud_proto = { package = "cita_cloud_proto", git = "https://github.com/cita-cloud/cloud-common-rs" }

[[bin]]
name = "bench"
path = "benches/main.rs"

[dev-dependencies]
tempfile = "3.5"
quickcheck = "1.0"
rand = "0.8"
minitrace = { git = "https://github.com/tikv/minitrace-rust.git" }
minitrace-jaeger = { git = "https://github.com/tikv/minitrace-rust.git" }
minitrace-macro = { git = "https://github.com/tikv/minitrace-rust.git" }
libsm = "0.5"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
