[package]
name = "storage"
version = "6.6.1"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = "=0.4.18"
log4rs = { version = "1.0", features = ["gzip"] }
clap = { version = "3.1", features = ["derive"] }
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.17", features = ["full"] }
rocksdb = "=0.17.0"
hex = "0.4"
serde = "1.0"
serde_derive = "1.0"
backtrace = "0.3"
tower = "0.4.13"

cita_cloud_proto = "=6.6.1"
status_code = { package = "cloud-code", version = "0.5" }
cloud-util = "0.5.0"

tempfile = "=3.6.0"

[[bin]]
name = "bench"
path = "benches/main.rs"

[dev-dependencies]
tempfile = "3.3"
quickcheck = "1.0"
rand = "0.8"
minitrace = { git = "https://github.com/tikv/minitrace-rust.git" }
minitrace-jaeger = { git = "https://github.com/tikv/minitrace-rust.git" }
minitrace-macro = { git = "https://github.com/tikv/minitrace-rust.git" }
libsm = "0.5.0"

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1

